Refactor to VEP aware nested fields + sonar + fix tests