@@ -2,16 +2,22 @@ package org.molgenis.vcf.decisiontree.utils;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
+import static org.molgenis.vcf.decisiontree.runner.info.VepInfoMetadataMapper.ALLELE_NUM;
 
 import htsjdk.variant.variantcontext.VariantContext;
+import htsjdk.variant.variantcontext.VariantContextBuilder;
 import htsjdk.variant.vcf.VCFConstants;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import org.apache.logging.log4j.util.Strings;
 import org.molgenis.vcf.decisiontree.UnexpectedEnumException;
+import org.molgenis.vcf.decisiontree.filter.VcfRecord;
 import org.molgenis.vcf.decisiontree.filter.model.Field;
+import org.molgenis.vcf.decisiontree.filter.model.NestedField;
 import org.molgenis.vcf.decisiontree.filter.model.ValueType;
+import org.molgenis.vcf.decisiontree.runner.info.VepHeaderLine;
 import org.springframework.lang.Nullable;
 
 public class VcfUtils {
@@ -30,8 +36,7 @@ public class VcfUtils {
     Object value = variantContext.getAttribute(field.getId());
     if (value == null) {
       integerValues = List.of();
-    } else if (value instanceof List<?>) {
-      List<?> objectValues = (List<?>) value;
+    } else if (value instanceof List<?> objectValues) {
       int size = objectValues.size();
       if (size == 0) {
         integerValues = emptyList();
@@ -43,8 +48,8 @@ public class VcfUtils {
           integerValues.add(getInfoValueAsInteger(objValue));
         }
       }
-    } else if (value instanceof String) {
-      integerValues = singletonList(getInfoStringValueAsInteger((String) value));
+    } else if (value instanceof String stringValue) {
+      integerValues = singletonList(getInfoStringValueAsInteger(stringValue));
     } else {
       throw new TypeConversionException(value, Integer.class);
     }
@@ -57,10 +62,10 @@ public class VcfUtils {
     Integer intValue;
     if (objValue == null) {
       intValue = null;
-    } else if (objValue instanceof Integer) {
-      intValue = (Integer) objValue;
-    } else if (objValue instanceof String) {
-      intValue = getInfoStringValueAsInteger((String) objValue);
+    } else if (objValue instanceof Integer integer) {
+      intValue = integer;
+    } else if (objValue instanceof String stringValue) {
+      intValue = getInfoStringValueAsInteger(stringValue);
     } else {
       throw new TypeConversionException(objValue, Integer.class);
     }
@@ -89,8 +94,7 @@ public class VcfUtils {
     Object value = variantContext.getAttribute(field.getId());
     if (value == null) {
       doubleValues = List.of();
-    } else if (value instanceof List<?>) {
-      List<?> objectValues = (List<?>) value;
+    } else if (value instanceof List<?> objectValues) {
       int size = objectValues.size();
       if (size == 0) {
         doubleValues = emptyList();
@@ -102,8 +106,8 @@ public class VcfUtils {
           doubleValues.add(getInfoValueAsDouble(objValue));
         }
       }
-    } else if (value instanceof String) {
-      doubleValues = singletonList(getInfoStringValueAsDouble((String) value));
+    } else if (value instanceof String string) {
+      doubleValues = singletonList(getInfoStringValueAsDouble(string));
     } else {
       throw new TypeConversionException(value, Double.class);
     }
@@ -116,10 +120,10 @@ public class VcfUtils {
     Double doubleValue;
     if (objValue == null) {
       doubleValue = null;
-    } else if (objValue instanceof Double) {
-      doubleValue = (Double) objValue;
-    } else if (objValue instanceof String) {
-      doubleValue = getInfoStringValueAsDouble((String) objValue);
+    } else if (objValue instanceof Double doubleVal) {
+      doubleValue = doubleVal;
+    } else if (objValue instanceof String string) {
+      doubleValue = getInfoStringValueAsDouble(string);
     } else {
       throw new TypeConversionException(objValue, Double.class);
     }
@@ -156,8 +160,7 @@ public class VcfUtils {
     Object value = variantContext.getAttribute(id);
     if (value == null) {
       strValues = List.of();
-    } else if (value instanceof List<?>) {
-      List<?> objectValues = (List<?>) value;
+    } else if (value instanceof List<?> objectValues) {
       int size = objectValues.size();
       if (size == 0) {
         strValues = emptyList();
@@ -169,8 +172,8 @@ public class VcfUtils {
           strValues.add(getInfoValueAsString(objValue));
         }
       }
-    } else if (value instanceof String) {
-      strValues = singletonList(getInfoStringValueAsString((String) value));
+    } else if (value instanceof String string) {
+      strValues = singletonList(getInfoStringValueAsString(string));
     } else {
       throw new TypeConversionException(value, String.class);
     }
@@ -183,8 +186,8 @@ public class VcfUtils {
     String strValue;
     if (objValue == null) {
       strValue = null;
-    } else if (objValue instanceof String) {
-      strValue = getInfoStringValueAsString((String) objValue);
+    } else if (objValue instanceof String string) {
+      strValue = getInfoStringValueAsString(string);
     } else {
       throw new TypeConversionException(objValue, String.class);
     }
@@ -212,8 +215,8 @@ public class VcfUtils {
 
     if (objValue == null) {
       bool = false;
-    } else if (objValue instanceof Boolean) {
-      bool = (Boolean) objValue;
+    } else if (objValue instanceof Boolean boolVal) {
+      bool = boolVal;
     } else {
       throw new TypeConversionException(objValue, Boolean.class);
     }
@@ -227,7 +230,7 @@ public class VcfUtils {
       value = getTypedInfoValue(field, stringValue);
     }else{
       List<String> values = Arrays.asList(stringValue.split(separator));
-      value = values.stream().map(singleValue -> getTypedInfoValue(field, singleValue)).collect(Collectors.toList());
+      value = values.stream().map(singleValue -> getTypedInfoValue(field, singleValue)).toList();
     }
     return value;
   }
@@ -245,8 +248,7 @@ public class VcfUtils {
         case FLOAT:
           typedValue = VcfUtils.getInfoValueAsDouble(stringValue);
           break;
-        case CHARACTER:
-        case STRING:
+        case CHARACTER, STRING:
           typedValue = VcfUtils.getInfoValueAsString(stringValue);
           break;
         default:
@@ -254,4 +256,19 @@ public class VcfUtils {
       }
       return typedValue;
     }
+
+  public static VcfRecord createEmptyCsqRecord(VcfRecord vcfRecord, VepHeaderLine vepMetadata,
+      Integer alleleIndex) {
+    Map<String, NestedField> fields = vepMetadata.getNestedFields();
+    List<String> values = new ArrayList<>();
+    for (int index = 0; index < fields.size(); index++) {
+      values.add("");
+    }
+    values.add(fields.get(ALLELE_NUM).getIndex(), alleleIndex.toString());
+    VariantContext variantContext = vcfRecord.getVariantContext();
+    VariantContextBuilder variantContextBuilder = new VariantContextBuilder(variantContext);
+    variantContextBuilder.attribute(vepMetadata.getParentField().getId(),
+        singletonList(Strings.join(values, '|')));
+    return new VcfRecord(variantContextBuilder.make());
+  }
 }
